docs/api/qiskit-addon-aqc-tensor/0.1/simulation-quimb-quimb-simulator.mdx
---
title: QuimbSimulator (v0.1)
description: API reference for qiskit_addon_aqc_tensor.simulation.quimb.QuimbSimulator in qiskit-addon-aqc-tensor v0.1
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit_addon_aqc_tensor.simulation.quimb.QuimbSimulator
---

# QuimbSimulator

<Class id="qiskit_addon_aqc_tensor.simulation.quimb.QuimbSimulator" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-addon-aqc-tensor/tree/stable/0.1/qiskit_addon_aqc_tensor/simulation/quimb/__init__.py#L75-L101" signature="QuimbSimulator(quimb_circuit_factory, autodiff_backend=None, progbar=False)" modifiers="class">
  Bases: [`TensorNetworkSimulationSettings`](simulation#qiskit_addon_aqc_tensor.simulation.TensorNetworkSimulationSettings "qiskit_addon_aqc_tensor.simulation.abstract.TensorNetworkSimulationSettings")

  Settings for Quimb simulator.

  This is compatible with both [Quimb’s MPS simulator](https://quimb.readthedocs.io/en/latest/tensor/tensor-circuit-mps.html), which eagerly contracts gates, as well as [Quimb’s standard method for circuit simulation](https://quimb.readthedocs.io/en/latest/tensor/tensor-circuit.html).

  ## Attributes

  **Parameters**

  *   **quimb\_circuit\_factory** ([*QuimbCircuitFactory*](simulation-quimb-quimb-circuit-factory "qiskit_addon_aqc_tensor.simulation.quimb.QuimbCircuitFactory"))
  *   **autodiff\_backend** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)") *| None*)
  *   **progbar** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)"))

  ### autodiff\_backend

  <Attribute id="qiskit_addon_aqc_tensor.simulation.quimb.QuimbSimulator.autodiff_backend" attributeTypeHint="Optional[str]" attributeValue="None" />

  ### progbar

  <Attribute id="qiskit_addon_aqc_tensor.simulation.quimb.QuimbSimulator.progbar" attributeTypeHint="bool" attributeValue="False">
    Whether to display a progress bar while applying gates.
  </Attribute>

  ### quimb\_circuit\_factory

  <Attribute id="qiskit_addon_aqc_tensor.simulation.quimb.QuimbSimulator.quimb_circuit_factory" attributeTypeHint="QuimbCircuitFactory">
    Callable for constructing the Quimb circuit, e.g., `Circuit()` or `CircuitMPS()`.
  </Attribute>
</Class>

