docs/api/qiskit-addon-aqc-tensor/0.2/simulation-quimb-quimb-simulator.mdx
---
title: QuimbSimulator (v0.2)
description: API reference for qiskit_addon_aqc_tensor.simulation.quimb.QuimbSimulator in qiskit-addon-aqc-tensor v0.2
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit_addon_aqc_tensor.simulation.quimb.QuimbSimulator
---

# QuimbSimulator

<Class id="qiskit_addon_aqc_tensor.simulation.quimb.QuimbSimulator" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-addon-aqc-tensor/tree/stable/0.2/qiskit_addon_aqc_tensor/simulation/quimb/__init__.py#L75-L126" signature="QuimbSimulator(quimb_circuit_factory, autodiff_backend=None, progbar=False)" modifiers="class">
  Bases: [`TensorNetworkSimulationSettings`](simulation#qiskit_addon_aqc_tensor.simulation.TensorNetworkSimulationSettings "qiskit_addon_aqc_tensor.simulation.abstract.TensorNetworkSimulationSettings")

  Settings for Quimb simulator.

  This is compatible with both [Quimb’s MPS simulator](https://quimb.readthedocs.io/en/latest/tensor/tensor-circuit-mps.html), which eagerly contracts gates by default, as well as [Quimb’s standard method for circuit simulation](https://quimb.readthedocs.io/en/latest/tensor/tensor-circuit.html).

  Example usage:

  ```python
  from functools import partial
  import quimb.tensor
  from qiskit_addon_aqc_tensor.simulation.quimb import QuimbSimulator

  simulator_settings = QuimbSimulator(
      partial(
          quimb.tensor.CircuitMPS,
          gate_opts={"cutoff": 1e-8},
      ),
      autodiff_backend="jax",
  )
  ```

  For additional options, see the API documentation for [quimb.tensor.Circuit](https://quimb.readthedocs.io/en/main/autoapi/quimb/tensor/circuit/index.html#quimb.tensor.circuit.Circuit) and [quimb.tensor.CircuitMPS](https://quimb.readthedocs.io/en/main/autoapi/quimb/tensor/circuit/index.html#quimb.tensor.circuit.CircuitMPS).

  ## Attributes

  **Parameters**

  *   **quimb\_circuit\_factory** ([*QuimbCircuitFactory*](simulation-quimb-quimb-circuit-factory "qiskit_addon_aqc_tensor.simulation.quimb.QuimbCircuitFactory"))
  *   **autodiff\_backend** ([*str*](https://docs.python.org/3/library/stdtypes.html#str) *| None*)
  *   **progbar** ([*bool*](https://docs.python.org/3/library/functions.html#bool))

  ### autodiff\_backend

  <Attribute id="qiskit_addon_aqc_tensor.simulation.quimb.QuimbSimulator.autodiff_backend" attributeTypeHint="Optional[str]" attributeValue="None" />

  ### progbar

  <Attribute id="qiskit_addon_aqc_tensor.simulation.quimb.QuimbSimulator.progbar" attributeTypeHint="bool" attributeValue="False">
    Whether to display a progress bar while applying gates.
  </Attribute>

  ### quimb\_circuit\_factory

  <Attribute id="qiskit_addon_aqc_tensor.simulation.quimb.QuimbSimulator.quimb_circuit_factory" attributeTypeHint="QuimbCircuitFactory">
    Callable for constructing the Quimb circuit, e.g., `Circuit()` or `CircuitMPS()`.
  </Attribute>
</Class>

